--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ authors:
     baocai:
       name:           libaocai
       site:           https://caibaoli.github.io
-      avatar:         /assets/images/baocai.jpg
+      avatar:         /assets/images/baocai.jpeg
       bio:            "爱西装没钱买工程师的blog"
       email:          li-shuai1993@163.com
       twitter:        
